GNOME Bugzilla – Bug 680751
clutter_stage_set_motion_events_enabled() is not honoured with CLUTTER_TOUCH_UPDATE events
Last modified: 2012-07-29 13:08:45 UTC
When dragging/scrolling using touch events, we want the same behaviour than for motion events. We need to honor the user's calls to clutter_stage_set_motion_events_enabled() to deactive event bubbling/captured sequences on the actor located under the pointer and just transmit events to the stage/grab actor.
Created attachment 219779 [details] [review] Patch v1
Created attachment 219784 [details] [review] patch v2 Removing debug messages...
Review of attachment 219784 [details] [review]: typo in the commit message - "deactive" instead of "deactivate". other than that, it looks okay.
pushed.